# AI-Based-App-Reviews-Analyser

./: .gitignore  pyproject.toml  render.yaml
.github/workflows/: weekly.yaml
config/: pulse.staging.yaml  pulse.yaml
docs/: architecture.md  implementationPlan.md
docs/edge-cases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
docs/evaluations/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
docs/implementation/: Phase-0-Bootstrap&Plan.md  Phase-1-ReviewIngestion.md  Phase-2-Normalize&PII.md  Phase-3-Embed&Cluster.md  Phase-4-LLMTheming.md  Phase-5-ReportComposition.md  Phase-6-MCPDelivery.md  Phase-7-Idempotency&Audit.md  Phase-8-Scheduling&CLI.md
src/pulse/audit/: __init__.py
src/pulse/cluster/: __init__.py
src/pulse/dashboard/: data.py  server.py
src/pulse/delivery/: __init__.py
src/pulse/ingestion/: __init__.py
src/pulse/llm/: __init__.py  budget.py  prompts.py  themer.py  validate.py
src/pulse/phase_0/: __init__.py
src/pulse/phase_1/: __init__.py
src/pulse/phase_2/: __init__.py
src/pulse/phase_5/: __init__.py  anchor.py  doc_blocks.py  email_render.py  types.py
src/pulse/phase_6/: __init__.py  types.py
src/pulse/phase_7/: __init__.py  idempotency.py  store.py  types.py
src/pulse/preprocess/: __init__.py
src/pulse/report/: __init__.py
src/pulse/scheduler/: __init__.py  pipeline.py  weekly.py
src/pulse/templates/: email.html.j2  email.txt.j2
src/pulse/util/: __init__.py  (+2 more)
tests/: conftest.py  test_no_google_sdk.py
(+65 files in other folders)
